--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@ https://templatemo.com/tm-591-villa-agency
             <div class="col-lg-12">
               <div class="item email">
                 <img src="assets/images/email-icon.png" alt="" style="max-width: 52px;">
-                <h6>info@villa.co<br><span>Business Email</span></h6>
+                <h6>infoinfo@villa.co<br><span>Business Email</span></h6>
               </div>
             </div>
           </div>
